--- a/app/less/hero.less
+++ b/app/less/hero.less
@@ -1,5 +1,5 @@
 .hero {
-  background: url("/img/jumbotron-bg-2.jpg");
+  background: @hero-background;
   background-position: center;
   background-attachment: fixed;
   -webkit-background-size: cover;
