--- a/app/less/main.less
+++ b/app/less/main.less
@@ -27,13 +27,14 @@
 @import "header";
 @import "main-menu";
 @import "navbar";
-@import "jumbotron";
+@import "hero";
 @import "cta";
 @import "partners";
 @import "footer";
 @import "featured";
 @import "new";
-@import "login";
+@import "account-menu";
+@import "modal";
 
 body {
   overflow-x: hidden;
