--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -2,9 +2,14 @@
 @primary-color: #d40f0f;
 @primary-color-dark: darken(@primary-color, 10%);
 
+@main-background: url("/img/jumbotron-bg-2.jpg");
+@main-background-blur: url("/img/jumbotron-bg-2-blur.jpg");
+
+
 //HERO
 @hero-overlay: rgba(0, 0, 0, 0.6);
 @hero-search-area-bg: transparent;
+@hero-background: @main-background;
 
 //CTA
 @cta-message-color: black;
@@ -14,22 +19,49 @@
 //FEATURED
 @featured-bg: @primary-color;
 @featured-overlay: rgba(0, 0, 0, 0.7);
+@featured-background: @main-background-blur;
 
 //NEW
 @new-overlay: rgba(255, 255, 255, 0.5);
+@new-background: @main-background-blur;
 
 //PARTNERS
 @partners-bg: white;
 
 //FOOTER
+@footer-bg: black;
+@footer-background: url("/img/jumbotron-bg-2.jpg");
+
 @footer-color: white;
 @footer-title-color: @primary-color;
 @footer-overlay: rgba(0, 0, 0, 0.8);
 
-@footer-bg: black;
 @footer-link-color: white;
 @footer-link-color-hover: @primary-color;
 @footer-contact-icon: darkgrey;
-@footer-social-fb-hover: #4080ff;
+@footer-social-fb-hover: #4267b2;
 @footer-social-insta-hover: #f48b38;
 
+//add-type
+@ad-type-rent-bg: #004f14;
+@ad-type-rent-color: white;
+@ad-type-for-sale-bg: #1d4077;
+@ad-type-for-sale-color: white;
+
+@ad-title-bg: #1d4077;
+@ad-title-color: #f6f7ff;
+
+//MODAL
+
+@modal-header-bg: @primary-color;
+@modal-header-color: white;
+
+
+//ACCOUNT MENU
+@account-menu-bg: @primary-color;
+@account-menu-color: white;
+//@account-menu-bg: white;
+//@account-menu-color: gray;
+
+//third part colors
+@fb-color: #4267b2;
