--- a/app/less/components-variables/bootstrap-variables.less
+++ b/app/less/components-variables/bootstrap-variables.less
@@ -593,7 +593,7 @@
 @modal-inner-padding:         15px;
 
 //** Padding applied to the modal title
-@modal-title-padding:         15px;
+@modal-title-padding:         15px 15px;
 //** Modal title line-height
 @modal-title-line-height:     @line-height-base;
 
