--- a/app/less/account-menu.less
+++ b/app/less/account-menu.less
@@ -160,8 +160,11 @@
 
 .account-menu-login-wrapper {
   .make-xs-column(12);
-  .make-lg-column(4.5);
-  .make-lg-column-offset(1);
+  .make-sm-column(6);
+  .make-md-column(5);
+  .make-md-column-offset(0.75);
+  .make-lg-column(4.2);
+  .make-lg-column-offset(1.5);
   color: @account-menu-color;
   margin-bottom: 10px;
 
@@ -181,6 +184,10 @@
     }
   }
 
+  h3 {
+    margin-bottom: 20px;
+  }
+
   @media @xs {
     h3 { .hidden;}
   }
@@ -190,6 +197,11 @@
     .pull-right;
 
     @media @xs {
+      .pull-left;
+      .btn-invert;
+      margin-bottom: 10px;
+    }
+    @media @sm {
       .pull-left;
       .btn-invert;
       margin-bottom: 10px;
@@ -217,8 +229,11 @@
 
 .account-menu-register-wrapper {
   .make-xs-column(12);
-  .make-lg-column(4.5);
-  .make-lg-column-offset(1.5);
+  .make-sm-column(6);
+  .make-md-column(5);
+  .make-md-column-offset(0.5);
+  .make-lg-column(4.2);
+  .make-lg-column-offset(0.6);
   color: @account-menu-color;
 
   > button {
@@ -235,6 +250,10 @@
     &:not(.collapsed) {
       .btn-primary-dark;
     }
+  }
+
+  h3 {
+    margin-bottom: 20px;
   }
 
   @media @xs {
@@ -257,5 +276,40 @@
 
   @media @lg {
     display: block;
+  }
+}
+
+.account-menu-links {
+  .make-xs-column(12);
+  padding-top: 30px;
+
+  @media @lg {
+    padding-top: 30px;
+  }
+  @media @xs {
+  }
+
+}
+.account-menu-link {
+  .make-xs-column(12);
+  .make-sm-column(6);
+  .make-md-column(3);
+  .make-lg-column(3);
+
+  @media @xs {
+    margin-bottom: 10px;
+  }
+  @media @sm {
+    margin-bottom: 20px;
+  }
+
+
+  .fa {
+    font-size: 22px;
+    margin-left: 20px;
+
+    @media @md {
+      margin-left: 10px;
+    }
   }
 }
