--- a/app/less/components-variables/ion-rangeSlider.less
+++ b/app/less/components-variables/ion-rangeSlider.less
@@ -228,14 +228,7 @@
 .irs-slider {
   top: 25px;
   width: 27px; height: 27px;
-  //border: 3px solid white;
-  //border: 3px solid @primary-color-dark;
-  //background: #DDD;
   background: @primary-color;
-  //background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(220,220,220,1) 20%,rgba(255,255,255,1) 100%); /* W3C */
-  //border-radius: 27px;
-  //-moz-border-radius: 27px;
-  //box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
   cursor: pointer;
 
   @media @xs {
@@ -269,9 +262,6 @@
   text-shadow: none;
   padding: 1px 5px;
   background: @primary-color-dark;
-  //background: #428bca;
-  //border-radius: 3px;
-  //-moz-border-radius: 3px;
 }
 .lt-ie9 .irs-from, .lt-ie9 .irs-to, .lt-ie9 .irs-single {
   background: #999;
@@ -294,4 +284,17 @@
 }
 
 .irs-disabled {
+}
+
+.main-menu-search-section {
+  .irs-slider {
+    background: white;
+  }
+  .irs-line {
+    background: @primary-color-dark;
+    border: none;
+  }
+  .irs-bar {
+    background: white;
+  }
 }
