--- a/app/less/cta.less
+++ b/app/less/cta.less
@@ -1,6 +1,6 @@
 
 .cta {
-  padding: @grid-gutter-width 0;
+  padding: @grid-gutter-width*3/2 0;
   background: @cta-bg;
 
   @media @xs {
@@ -8,6 +8,15 @@
   }
 
   .cta-message {
+    .make-xs-column(12);
+    .make-xs-column-offset(0);
+    .make-sm-column(8);
+    .make-sm-column-offset(0);
+    .make-md-column(8);
+    .make-md-column-offset(0.5);
+    .make-lg-column(8);
+    .make-lg-column-offset(1);
+
     .delayed(@cta-time-delay-offset + 0ms);
 
     margin-bottom: @grid-gutter-width/2;
@@ -18,15 +27,17 @@
       @media @xs { .text-center; }
       @media @lg { font-size: @font-size-h4;}
     }
-    .make-xs-column(12);
-    .make-sm-column(6);
-    .make-md-column(8);
-    //.make-md-column-offset(1);
-    .make-lg-column-offset(1);
+
+    @media @sm {
+      .text-center;
+      padding-top: 0px;
+      font-size: 18px;
+    }
 
     @media @md {
-      .text-right;
-      padding-top: 10px;
+      .text-center;
+      padding-top: 0px;
+      font-size: 18px;
     }
 
     @media @lg {
@@ -34,19 +45,14 @@
       width: auto;
       display: inline-block;
     }
-
   }
 
   .cta-btn {
     .delayed(@cta-time-delay-offset + 200ms);
 
     .make-xs-column(12);
-    .make-sm-column(6);
-    .make-md-column(2);
-
-    a {
-
-    }
+    .make-sm-column(4);
+    .make-md-column(3);
 
     @media @xs {
       text-align: center;
