--- a/app/less/main-menu.less
+++ b/app/less/main-menu.less
@@ -1,6 +1,6 @@
 #main-menu {
   position: fixed;
-  background: @primary-color;
+  background: @main-menu-bg !important;
   z-index: 1500;
   top: 0;
   left: 0;
@@ -8,19 +8,18 @@
   .transitions;
   overflow-x: hidden;
   overflow-y: auto;
+  max-height: 100%;
 
   padding-top: 90px;
   padding-bottom: 30px;
 
   @media @xs {
     padding-top: 45px;
-    height: 100%;
   }
 
 
   &.active {
     top: 0;
-    //max-height: 400px;
   }
 
 
@@ -32,33 +31,41 @@
   &.top {
     padding-top: 60px;
   }
+
+  h3 {
+    color: @main-menu-title-color;
+  }
 }
 
-.main-menu-search-area {
+.main-menu-search-section {
   .delayed(300ms);
   .animated;
+
+  h3 {
+    .hidden-xs;
+  }
 
   label { color: white; }
 
   .make-xs-column(12);
-  .make-lg-column(4);
+  .make-xs-column-offset(0);
+  .make-sm-column(12);
+  .make-sm-column-offset(0);
+  .make-md-column(4);
+  .make-md-column-offset(2);
+  .make-lg-column(8);
+  .make-lg-column-offset(0);
 
-  .open-search-btn {
+  > button {
     .transitions;
+    .hidden-sm;
+    .hidden-md;
     .hidden-lg;
-
-    &:focus, &:active {
-      background: @primary-color;
-      border-color: @primary-color;
-      box-shadow: none;
-      outline: none;
-    }
-
-    text-align: left;
+    .text-center;
 
     .fa-plus {
       .transitions;
-      font-size: 24px;
+      font-size: 18px;
       position: absolute;
       right: 30px;
       top: 12px;
@@ -69,75 +76,175 @@
         transform: rotate(45deg);
       }
     }
-
-    &:not(.collapsed) {
-      background: @primary-color-dark;
-    }
   }
 
   .form-holder {
     .transitions;
-    margin: 0;
     padding-top: 10px;
     padding-bottom: 10px;
-    background: @primary-color-dark;
-    //background: rgba(0, 0, 0, 0.5);
-    @media @xs {
-      background: @primary-color;
 
-      &.in {
-        background: @primary-color-dark;
-      }
+    @media @sm {
+      display: block;
     }
-
+    @media @md {
+      display: block;
+    }
     @media @lg {
       display: block;
     }
   }
 
-  .search-btn {
-    .btn-primary;
+  .form-ad-type {
+    .make-xs-column(12);
+    .make-sm-column(4);
+    .make-md-column(12);
+    .make-lg-column(4);
 
-    @media @xs {
-      .btn-invert;
+  }
 
+  .form-object-type {
+    .make-xs-column(12);
+    .make-sm-column(4);
+    .make-md-column(12);
+    .make-lg-column(4);
 
+  }
 
-    }
+  .form-city {
+    .make-xs-column(12);
+    .make-sm-column(4);
+    .make-md-column(12);
+    .make-lg-column(4);
+
+  }
+  .form-price {
+    .make-xs-column(12);
+    .make-sm-column(6);
+    .make-md-column(12);
+    .make-lg-column(6);
+
+  }
+  .form-area {
+    .make-xs-column(12);
+    .make-sm-column(6);
+    .make-md-column(12);
+    .make-lg-column(6);
+
+  }
+
+  .form-submit {
+    .make-xs-column(12);
+    .make-sm-column(12);
+    .make-md-column(12);
+    .make-lg-column(12);
+
   }
 
 }
 
-.search-area {
+.main-menu-links-section {
   .make-xs-column(12);
-}
-
-.links-area {
-  .make-xs-column(12);
-  .make-lg-column(8);
-}
-
-.main-menu-tab {
-  .make-xs-column(12);
+  .make-xs-column-offset(0);
   .make-sm-column(4);
+  .make-sm-column-offset(0);
+  .make-md-column(3.5);
+  .make-md-column-offset(0.5);
+  .make-lg-column(3);
+  .make-lg-column-offset(1);
 
-  @media @xs {
+  @media @xs {padding-top: 30px;}
+  @media @lg {padding-top: 50px;}
+  @media @md {padding-top: 20px;}
+  @media @sm {padding-top: 20px;}
+
+  ul {
+    list-style-type: none;
+    padding: 0;
   }
-}
 
-.main-menu-tab-selector {
   a {
     .btn;
-    .btn-lg;
-    .btn-primary;
-    //color: white;
+    .btn-invert;
+    .btn-block;
 
-    &:not(.collapsed) {
-      background: red;
-    }
+    margin-bottom: 10px;
   }
 }
 
-.accordion {
+.main-menu-social-section {
   .make-xs-column(12);
+  .make-xs-column-offset(0);
+  .make-sm-column(3);
+  .make-sm-column-offset(0);
+  .make-md-column(3.5);
+  .make-md-column-offset(0.5);
+  .make-lg-column(2);
+  .make-lg-column-offset(3.5);
+
+  @media @md {
+    padding-top: 20px;
+  }
+
+  a + a {
+    margin-left: 15px;
+  }
+}
+
+.main-menu-contact-section {
+  .make-xs-column(12);
+  .make-xs-column-offset(0);
+  .make-sm-column(5);
+  .make-sm-column-offset(0);
+  .make-md-column(3.5);
+  .make-md-column-offset(0.5);
+  .make-lg-column(3);
+  .make-lg-column-offset(1);
+
+  @media @md {
+    padding-top: 20px;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0 0 0 0;
+
+    a {
+      .btn;
+      margin-bottom: 5px;
+      padding-left: 40px;
+      color: @main-menu-contact-color;
+
+      &:hover {
+        color: @main-menu-contact-hover-color;
+
+      }
+    }
+  }
+
+  .phone-link {
+    position: relative;
+    &:before {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      line-height: 1;
+      font-family: FontAwesome;
+      font-size: 30px;
+      color: @main-menu-contact-icon;
+      content: @fa-var-phone-square;
+    }
+  }
+  .mail-link {
+    position: relative;
+    &:before {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      line-height: 1;
+      font-family: FontAwesome;
+      font-size: 30px;
+      color: @main-menu-contact-icon;
+      content: @fa-var-envelope-square;
+    }
+  }
 }
