--- a/app/less/partners.less
+++ b/app/less/partners.less
@@ -2,30 +2,10 @@
   position: relative;
   background: @partners-bg;
 
-
-  //&:before {
-  //  display: block;
-  //  content: "";
-  //  position: absolute;
-  //  border-top: 100px solid transparent;
-  //  border-right: 3000px solid @partners-bg;
-  //  width: 100%;
-  //  height: 0;
-  //  top: -100px;
-  //  pointer-events: none;
-  //}
-  //&:after {
-  //  display: block;
-  //  content: "";
-  //  position: absolute;
-  //  border-top: 100px solid @partners-bg;
-  //  border-left: 3000px solid transparent;
-  //  width: 100%;
-  //  height: 0;
-  //  //top: -100px;
-  //  bottom: -100px;
-  //  pointer-events: none;
-  //}
+  padding: @grid-gutter-width 0;
+  @media @xs {
+    padding: 0;
+  }
 
   .image-wrapper {
     @media @xs { padding: 10px; }
@@ -55,7 +35,7 @@
   .make-md-column(4);
   .make-lg-column(3);
 
-  color: @primary-color;
+  color: @partners-title-color;
 
   @media @md { padding-top: 10px; }
   @media @lg { padding-top: 30px; }
