domba - price and area input changed to regular inputs

--- a/app/less/hero.less
+++ b/app/less/hero.less
@@ -1,6 +1,6 @@
 .hero {
   background: @hero-background;
-  background-position: center;
+  background-position: center 0px;
   background-attachment: fixed;
   -webkit-background-size: cover;
   background-size: cover;
