--- a/app/less/header.less
+++ b/app/less/header.less
@@ -13,8 +13,12 @@
   .left-side {.make-xs-column(3);}
 
   .right-side {
-    .make-xs-column(3);
+    .make-xs-column(12);
+    .make-sm-column(8);
     .pull-right;
+    @media @xs {
+      .pull-left;
+    }
   }
 
   @media @xs {padding: 0;}
@@ -33,13 +37,17 @@
   float: left;
   position: absolute;
   top: 0;
-  left: 50%;
-  .translate(-50%,0);
+  left: 153px;
+  //left: 50%;
+  //.translate(-50%,0);
+
+  .hidden-sm;
 
   @media @xs {
     width: 100px;
     height: 35px;
     top: 5px;
+    left: 50px;
   }
   @media @sm {
     top: 10px;
@@ -66,5 +74,123 @@
     .transitions;
     position: absolute;
   }
+}
+
+.header-btn{
+  &:extend(.transitions);
+  position: relative;
+  display: inline-block;
+  //width: 150px;
+  height: 40px;
+  border: 0;
+  background: @primary-color;
+  z-index: 2000;
+  .pull-right;
+
+  padding-right: 15px;
+  margin-right: 15px;
+
+  @media @xs {
+    //width: 40px;
+    .pull-left;
+  }
+
+  &.active {
+    background: @primary-color-dark;
+  }
+
+  .icon-bar {
+    &:extend(.transitions);
+    width: 26px;
+    height: 4px;
+    border-radius: 1px;
+    display: block;
+    position: absolute;
+    z-index: 1;
+    background-color: white;
+    margin: 0;
+    left: 7px;
+    top: 18px;
+  }
+  .icon-bar-1 {
+    -moz-transform: translate(0,9px);
+    -webkit-transform: translate(0,9px);
+    -o-transform: translate(0,9px);
+    -ms-transform: translate(0,9px);
+    transform: translate(0,9px);
+    .opacity(0);
+  }
+  .icon-bar-1.rotated {
+    -moz-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    .opacity(1);
+  }
+  .icon-bar-2 {
+    .opacity(0);
+    -moz-transform: translate(0,-9px);
+    -webkit-transform: translate(0,-9px);
+    -o-transform: translate(0,-9px);
+    -ms-transform: translate(0,-9px);
+    transform: translate(0,-9px);
+  }
+  .icon-bar-2.rotated {
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    .opacity(1);
+  }
+
+  &.active {
+    i {
+      font-size: 15px;
+      padding-left: 8px;
+    }
+  }
+
+  i {
+    font-size: 32px;
+    color: white;
+    .transitions;
+    margin-top: 3px;
+
+    .pull-left;
+    @media @xs {
+    }
+  }
+
+  .text {
+    font-size: @font-size-base * 1.2;
+    color: white;
+    line-height: 40px;
+    margin-left: 15px;
+
+
+    //position: absolute;
+    //top: 0;
+    //left: 50px;
+
+    @media @xs {
+      //display: none;
+    }
+
+  }
+
+  .opened {
+
+  }
+
+  .closed {
+
+  }
+
+  &:focus {
+    outline: none;
+  }
+
 }
 
