domba - transparent short description

--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -60,6 +60,8 @@
 
 @ad-details-bg: white;
 @ad-details-color: black;
+@ad-details-bg-alt: rgba(0,0,0,0.5);
+@ad-details-color-alt: white;
 @ad-details-icon: #a30c0c;
 
 @ad-title-bg: lightgrey;
