--- a/app/less/new.less
+++ b/app/less/new.less
@@ -161,8 +161,11 @@
 
       padding: 25px 15px 15px 15px;
 
-      background: @ad-details-bg;
-      color: @ad-details-color;
+      //background: @ad-details-bg;
+      //color: @ad-details-color;
+
+      background: @ad-details-bg-alt;
+      color: @ad-details-color-alt;
 
       @media @lg {
         height: 197px;
