domba - info button, labels removed...

--- a/app/less/account-menu.less
+++ b/app/less/account-menu.less
@@ -277,6 +277,49 @@
   @media @lg {
     display: block;
   }
+
+  .helper-question {
+    display: inline-block;
+    margin-top: 5px;
+    color: white;
+  }
+
+  //.helper-question-i {
+  //  font-size: 26px;
+  //  line-height: 36px;
+  //  position: absolute;
+  //  top: 0;
+  //  right: 0;
+  //  width: 36px;
+  //  .text-center;
+  //
+  //
+  //  display: inline-block;
+  //  //margin-top: 5px;
+  //  //color: white;
+  //}
+
+  .form-group {
+    position: relative;
+
+    .input-group-btn {
+      height: 36px;
+      border: 0;
+
+      .btn-default {
+        //background: red;
+        border: 1px solid #ccc;
+        color: @primary-color;
+        padding-top: 0;
+        padding-bottom: 0;
+
+        i {
+          line-height: 34px;
+          font-size: 24px;
+        }
+      }
+    }
+  }
 }
 
 .account-menu-links {
