--- a/app/less/my-variables.less
+++ b/app/less/my-variables.less
@@ -57,6 +57,8 @@
 @ad-type-rent-color: white;
 @ad-type-for-sale-bg: #1d4077;
 @ad-type-for-sale-color: white;
+@ad-type-demand-bg: #9e4901;
+@ad-type-demand-color: white;
 
 @ad-details-bg: white;
 @ad-details-color: black;
