--- a/app/less/hero.less
+++ b/app/less/hero.less
@@ -247,6 +247,15 @@
     .make-lg-column(12);
 
   }
+
+  .form-price-from {
+    .make-xs-column(6);
+    padding-right: 5px;
+  }
+  .form-price-to {
+    .make-xs-column(6);
+    padding-left: 5px;
+  }
   .form-area {
     .make-xs-column(12);
     .make-sm-column(6);
@@ -254,7 +263,14 @@
     .make-lg-column(12);
 
   }
-
+  .form-area-from {
+    .make-xs-column(6);
+    padding-right: 5px;
+  }
+  .form-area-to {
+    .make-xs-column(6);
+    padding-left: 5px;
+  }
   .form-submit {
     .make-xs-column(12);
     .make-sm-column(12);
