domba - search updated

--- a/app/less/wsfy-menu.less
+++ b/app/less/wsfy-menu.less
@@ -146,7 +146,7 @@
   }
 }
 
-.account-menu-title {
+.wsfy-menu-title {
   color: @account-menu-color;
   .make-xs-column(12);
   .text-center;
@@ -156,6 +156,11 @@
       font-size: 26px;
     }
   }
+}
+
+.wsfy-menu-form {
+  .make-xs-column(12);
+  position: relative;
 }
 
 .account-menu-login-wrapper {
