--- a/app/less/components-variables/select2.less
+++ b/app/less/components-variables/select2.less
@@ -482,3 +482,8 @@
 
 .select2-container--classic.select2-container--open .select2-dropdown {
   border-color: #5897fb; }
+
+
+.select2-container--default .select2-selection--multiple {
+  border-radius: 0;
+}
