--- a/app/less/new.less
+++ b/app/less/new.less
@@ -51,6 +51,15 @@
   .make-xs-column(12);
 }
 
+.small-ad {
+
+  position: relative;
+  .make-xs-column(12);
+  .make-sm-column(6);
+  .make-md-column(4);
+  .make-md-column(4);
+}
+
 .new-list-item {
   overflow: hidden;
   position: relative;
