--- a/app/less/wsfy-menu.less
+++ b/app/less/wsfy-menu.less
@@ -144,6 +144,68 @@
   &.top {
     padding-top: 60px;
   }
+
+  .form-ad-type {
+    .make-xs-column(12);
+    .make-sm-column(4);
+    .make-md-column(12);
+    .make-lg-column(12);
+
+  }
+
+  .form-object-type {
+    .make-xs-column(12);
+    .make-sm-column(4);
+    .make-md-column(12);
+    .make-lg-column(12);
+
+  }
+
+  .form-city {
+    .make-xs-column(12);
+    .make-sm-column(4);
+    .make-md-column(12);
+    .make-lg-column(12);
+
+  }
+  .form-price {
+    .make-xs-column(12);
+    .make-sm-column(6);
+    .make-md-column(12);
+    .make-lg-column(12);
+
+  }
+
+  .form-price-from {
+    .make-xs-column(6);
+    padding-right: 5px;
+  }
+  .form-price-to {
+    .make-xs-column(6);
+    padding-left: 5px;
+  }
+  .form-area {
+    .make-xs-column(12);
+    .make-sm-column(6);
+    .make-md-column(12);
+    .make-lg-column(12);
+
+  }
+  .form-area-from {
+    .make-xs-column(6);
+    padding-right: 5px;
+  }
+  .form-area-to {
+    .make-xs-column(6);
+    padding-left: 5px;
+  }
+  .form-submit {
+    .make-xs-column(12);
+    .make-sm-column(12);
+    .make-md-column(12);
+    .make-lg-column(12);
+
+  }
 }
 
 .wsfy-menu-title {
@@ -163,6 +225,28 @@
   position: relative;
 }
 
+.wsfy-menu-contact-form {
+  .make-xs-column(12);
+  .make-lg-column(6);
+  position: relative;
+}
+
+.wsfy-menu-search-form {
+  .make-xs-column(12);
+  .make-lg-column(6);
+  position: relative;
+}
+
+.wsfy-menu-deta-form {
+  .make-xs-column(12);
+  .make-lg-column(6);
+  position: relative;
+}
+
+
+.wsfy-menu-subtitle {
+  .make-xs-column(12);
+}
 .account-menu-login-wrapper {
   .make-xs-column(12);
   .make-sm-column(6);
