--- a/app/less/wsfy-menu.less
+++ b/app/less/wsfy-menu.less
@@ -231,13 +231,7 @@
   position: relative;
 }
 
-.wsfy-menu-search-form {
-  .make-xs-column(12);
-  .make-lg-column(6);
-  position: relative;
-}
-
-.wsfy-menu-deta-form {
+.wsfy-menu-details-form {
   .make-xs-column(12);
   .make-lg-column(6);
   position: relative;
