--- a/app/less/wsfy-menu.less
+++ b/app/less/wsfy-menu.less
@@ -227,19 +227,26 @@
 
 .wsfy-menu-contact-form {
   .make-xs-column(12);
-  .make-lg-column(6);
+  //.make-lg-column(6);
+  .make-lg-column(3.5);
+  .make-lg-column-offset(2);
   position: relative;
 }
 
 .wsfy-menu-details-form {
   .make-xs-column(12);
-  .make-lg-column(6);
+  //.make-lg-column(6);
+  .make-lg-column(4.5);
+  //.make-lg-column-offset(2);
   position: relative;
 }
 
 
 .wsfy-menu-subtitle {
   .make-xs-column(12);
+  color: white;
+
+  padding: 0;
 }
 .account-menu-login-wrapper {
   .make-xs-column(12);
